--- a/codes/AngelEyes/src/main/webapp/style/css/style.css
+++ b/codes/AngelEyes/src/main/webapp/style/css/style.css
@@ -1,5 +1,8 @@
 /* reset */
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;
+	/*font-size:100%;*/
+	/*font:inherit;*/
+	vertical-align:baseline;}
 article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
 ol,ul{list-style:none;margin:0px;padding:0px;}
 blockquote,q{quotes:none;}
@@ -45,6 +48,8 @@ body{
 }
 .logo img{
 	display:inline-block;
+	width:154px;
+	height:52px;
 }
 .nav-icon{
 	float: left;
@@ -1202,3 +1207,58 @@ span.mail a:hover{
 	}
 }
 /*--//End-media Quries for 320px-monitors-*/
+
+.about-tit {
+	height: 106px;
+    font-size: 26px;
+    line-height: 106px;
+    color: #4E5153;
+}
+
+.intro-text, .intro-text p {
+    line-height: 28px;
+    font-size: 16px;
+    color: #85888B;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 15px;
+    margin-left: 0px;
+}
+
+#table_1_normaldivr {
+	color: #666;
+	width: 630px;
+	margin-top:20px;  
+	float: left; 
+}
+
+#table_1_normaldivr td {
+	border-bottom: #ededed 1px solid; padding-left: 10px;
+}
+
+#font_red {
+	line-height: 18px; margin: 20px 10px 10px 25px; width: 280px; color: #d71d1e; font-size: 13px
+}
+
+#table_1_normaldivl {
+	width: 320px; 
+	margin: 10px 2px 10px 2px; 
+	float: left;
+}
+
+#_table_1_photo{ 
+	height: 370px;
+	margin: 40px 10px 10px; 
+	padding: 5px; 
+	width: 277px;
+	text-align:center;
+}
+.cimg{line-height:150px;height:150px;vertical-align:middle;}
+.reginfo{border:1px #e3e3e3 solid;}
+.reginfo .title{width:100%; text-align:center;margin-top: 10px;}
+.reginfo ul{ width:560px; margin:5px auto; list-style-position: outside;list-style-type: none;}
+.reginfo li{line-height:30px; border-bottom:1px #92c22e dashed;}
+.reginfo span{margin-left: 5px;margin-right: 5px;color:#497f0d;}
+.reginfo .do{width: 390px; height:38px;margin-left: 50px; margin-bottom:30px; }
+
+
